# fake_object_tool

./: CMakeLists.txt  package.xml  rviz_plugin.xml
include/fake_object_tool/: rectangle_tool.hpp
src/: rectangle_tool.cpp
