<?xml version="1.0"?>
<package format="3">
  <name>fake_object_tool</name>
  <version>0.0.0</version>
  <description>RViz Tool to spawn virtual objects into the map frame, use in combination with fake_object_filter.</description>
  <maintainer email="stefan.kessler97@gmail.com">ros</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>qtbase5-dev</depend>

  <export>
    <rviz plugin="share/${PROJECT_NAME}/rviz_plugin.xml"/>
    <build_type>ament_cmake</build_type>
  </export>
</package>